longhorn-system/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: longhorn-system
spec:
  ingressClassName: nginx
  rules:
    - host: longhorn.k.rm-rfstar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
